app/src/objects/Achievement__c.object
<CustomObject>
    <fields>
        <fullName>Achievement_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement Category</label>
        <referenceTo>Achievement_Category__c</referenceTo>
        <relationshipLabel>Achievements</relationshipLabel>
        <relationshipName>Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquired_Image__c</fullName>
        <label>Acquired Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Eligible_Image__c</fullName>
        <label>Eligible Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Completed_Status__c</fullName>
        <inlineHelpText>Overriding the completed status will make the Achievement Assignments go to the defined &quot;override status&quot; instead of &quot;Acquired&quot;. It&apos;s up to you move to the &quot;Acquired&quot;  status once this feature is used.</inlineHelpText>
        <label>Override Completed Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_URL__c</fullName>
        <inlineHelpText>Specify a value if you want users to go to this URL when clicking the Achievement Image. This can be used to redirect to a custom page where you manage additional steps before changing the status of the Achievement to &quot;Acquired&quot;.</inlineHelpText>
        <label>Override URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Achievements</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Certifications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Badge_Id__c</fullName>
        <label>Work Badge Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Badge_Giver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work.com Badge Giver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Badge_Image_URL__c</fullName>
        <label>Work Badge Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Badge_Message__c</fullName>
        <label>Work.com Badge Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the achievement won&apos;t be displayed in the user&apos;s profile page</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <label>Achievement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Achievement_Category__c</columns>
        <columns>Type__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>